--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "NODE_ENV=test && jest --verbose --testEnvironment=steps",
     "test:server": "NODE_ENV=test && jest ./__tests__/server-test.js --verbose",
     "test:client": "NODE_ENV=test && jest ./__tests__/client-test.js --verbose",
+    "test:altclient": "NODE_ENV=test && jest ./__tests__/alt-client-test.js --verbose",
     "start": "node server/server.js"
   },
   "dependencies": {
